package com.training.ISP.good;

interface Printer {
    void print(Document document);
}
