package com.training.ISP.good;

interface Scanner {
    void scan(Document document);
}
