@startuml

interface Printer{
    +void print(Document)
}

interface Scanner{
    +void scan(Document)
}

class SimplePrinter {
    +void print(Document)
}

class SimplePrinterScanner {
    +void print(Document)
    +void scan(Document)
}

Printer <|..down SimplePrinter
Printer <|..down SimplePrinterScanner
Scanner <|..down SimplePrinterScanner

@enduml